--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 body {
-    color:white;
-    background-color: black;
+    color: white;
+    background-color:black;
 }
 
-ul
+ul {
+    display: flex;
+    justify-content:space-between;
+    list-style-type:none;
+    align-items:center;
+    padding: 16px;;
+
+}
