--- a/style.css
+++ b/style.css
@@ -16,3 +16,18 @@ a {
     color: white;
     text-decoration: none;
 }
+
+img {
+    width: 150px;
+    height: 150px;
+    border: radius 50%;
+    border: 5px solid blueviolet
+}
+
+.center {
+text-align:center;
+} 
+
+h1 {
+    color:blueviolet
+}
