--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    color: white;
-    background-color:black;
+    color: black;
+    background-color:white;
     font-family: 'Times New Roman', Times, serif;
 }
 
@@ -13,7 +13,7 @@ ul {
 
 }
 a {
-    color: white;
+    color:black;
     text-decoration: none;
 }
 
@@ -21,7 +21,7 @@ img {
     width: 150px;
     height: 150px;
     border: radius 50%;
-    border: 5px solid blueviolet
+    border: 5px solid #5bbe42
 }
 
 .center {
@@ -29,10 +29,15 @@ text-align:center;
 } 
 
 h1 {
-    color:blueviolet
+    color:#5bbe42
 }
 
 footer img {
     width: 40px;
     height: 40px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
 }
