--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ img {
     width: 150px;
     height: 150px;
     border: radius 50%;
-    border: 5px solid #5bbe42
+    border: 5px solid blue
 }
 
 .center {
@@ -29,7 +29,7 @@ text-align:center;
 } 
 
 h1 {
-    color:#5bbe42
+    color: blue
 }
 
 footer img {
