--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ footer {
 
 footer a {
     margin: 20px;
-    text-align: ;
+    text-align:center;
 }
 
 footer p {
@@ -55,6 +55,6 @@ footer p {
     padding: 0px 50px;
 }
 
-nav a:houver {
+nav a:hover {
     color: white;
 }
