--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a {
 header img {
     width: 150px;
     height: 150px;
-    border: radius 50%;
+    border-radius:  50%;
     border: 5px solid blue
 }
 
